--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,10 +13,9 @@
 body {
   margin: 0;
   padding: 0;
-  background-image: linear-gradient(rgba(59,130,246,0.4), rgba(59,130,246,0.4)), url(../img/Background.png);
   background-size: cover;
   background-attachment: fixed;
-  background-color: #3B82F6;
+  background-color: var(--bg-color);
   color: var(--text-color);
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
